Makefiles: add 'clean' target

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,5 +1,7 @@
-.PHONY: default
+.PHONY: default clean
 default: libsystrap.a
+clean:
+	rm -f libsystrap.a
 
 libsystrap.a:
 	ln -sf ../src/libsystrap.a $@
