--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,7 +1,12 @@
 .PHONY: default clean
+
 default: libsystrap.a
+
 clean:
 	rm -f libsystrap.a
 
 libsystrap.a:
 	ln -sf ../src/libsystrap.a $@
+
+clean:
+	rm -f libsystrap.a
