--- a/example/Makefile
+++ b/example/Makefile
@@ -1,25 +1,56 @@
 THIS_MAKEFILE := $(lastword $(MAKEFILE_LIST))
 srcroot := $(realpath $(dir $(THIS_MAKEFILE)))/..
 
+# run-from-srcroot case:
+# if the current dir is the source dir, change to the output directory
+# and re-invoke this makefile from there.
+# If we don't know which output directory we want, we want the production one.
+ifeq ($(realpath .),$(realpath $(srcroot))/example)
+ifeq ($(MAKECMDGOALS),)
+MAKECMDGOALS := default
+endif
+arch := $(shell m=`uname -m`; case "$$m" in (x86_64) echo x86_64 ;; (*) echo "$$m" ;; esac)
+.PHONY: $(MAKECMDGOALS)
+$(MAKECMDGOALS):
+	mkdir -p $(srcroot)/build/$(arch)
+	$(MAKE) -C $(srcroot)/build/$(arch) -f $(srcroot)/example/Makefile $(MAKECMDGOALS)
+else
+# the rest: we take our arch from the current dir
+arch := $(notdir $(realpath .))
+vpath %.c $(srcroot)/example
+vpath %.s $(srcroot)/example
+vpath %.lds $(srcroot)/example
+
+# set arch options based on the name of the build dir
+
 .PHONY: default
 default: trace-syscalls.so trace-syscalls-ld.so
 
 SYS := $(shell uname -s | tr A-Z a-z )
 
-ARCH ?= $(shell gcc -print-multiarch | sed 's/-.*//' )
-ifeq ($(ARCH),i386)
+ifneq ($(shell gcc $(CFLAGS) -print-multiarch | sed 's/-.*//' ),$(arch))
+$(error GCC does not agree that the architecture is `$(arch)')
+endif
+
+# if we are doing a 32-on-64 build, add -m32
+ifeq ($(arch) $(shell uname -m),i386 x86_64)
+CFLAGS += -m32
+LDFLAGS += -m32
+endif
+
+ifeq ($(arch),i386)
 LD_SO ?= /lib/ld-linux.so.2
 else
-ifeq ($(ARCH),x86_64)
+ifeq ($(arch),x86_64)
 LD_SO ?= /lib64/ld-linux-x86-64.so.2
 endif
 endif
 
 ifeq ($(LD_SO),)
-$(error Could not determine ld.so pathname (from architecture $(ARCH)).)
+$(error Could not determine ld.so pathname (from architecture $(arch)).)
 endif
 
-UNWIND_MACHINE ?= $(ARCH)
+UNWIND_MACHINE ?= $(arch)
 ifeq ($(UNWIND_MACHINE),i386)
 UNWIND_MACHINE := x86
 endif
@@ -33,6 +64,8 @@ include $(srcroot)/contrib/config.mk
 $(srcroot)/contrib/config.mk:
 	$(MAKE) -C $(srcroot)/contrib config.mk
 endif
+
+# Check for dependencies built already -- unless cleaning
 ifneq ($(MAKECMDGOALS),clean)
 
 ifeq ($(LIBRUNT_DIR),)
@@ -44,22 +77,32 @@ endif
 ifeq ($(DONALD),)
 $(error Please set DONALD or make $(srcroot)/config.mk do so)
 endif
+
+ifneq ($(LIBC_A_PATTERN),)
+LIBC_A ?= $(shell echo '$(LIBC_A_PATTERN)' | env arch='$(arch)' envsubst )
+endif
+
 ifeq ($(SYS),freebsd)
 LIBC_A ?= /usr/lib/libc_pic.a
 endif
 ifeq ($(LIBC_A),)
-$(error Please set LIBC_A to point to a position-independent libc archive)
+$(error Please set LIBC_A to point to a position-independent libc archive, or LIBC_A_PATTERN to a pattern that can locate one after substituting $${arch})
 endif
-ifeq ($(realpath $(srcroot)/lib/libsystrap.a),)
+ifeq ($(realpath $(srcroot)/build/$(arch)/libsystrap.a),)
 $(error Please build libsystrap first)
 endif
 
-endif
+endif # end dependencies check
+
+# LIBC_CFLAGS_PATTERN is now expected to be self-sufficient
+# e.g. using musl we should be able to build without pulling in ambient glibc stuff
+# we use envsubst to expand the pattern
+LIBC_CFLAGS := $(shell echo '$(LIBC_CFLAGS_PATTERN)' | env arch="$(arch)" envsubst )
+$(info LIBC_CFLAGS is $(LIBC_CFLAGS))
+CFLAGS += -nostdinc $(LIBC_CFLAGS)
 
 CFLAGS += -DOUR_LDSO_DIR="\"$(shell pwd)/\""
-CFLAGS += $(LIBC_CFLAGS)
 CFLAGS += -DSYSTRAP_DEFINE_FILE
-CFLAGS += -DASSERT_FAIL_LINE_SIGNED   # see note in src/Makefile
 CFLAGS += -I$(XED_DIR)/include
 
 CFLAGS += -g
@@ -69,11 +112,19 @@ CFLAGS += -O2
 endif
 CFLAGS += -fPIC
 CFLAGS += -ffreestanding -fno-omit-frame-pointer
+CFLAGS += -I$(srcroot)/src
 CFLAGS += -I$(srcroot)/include
 CFLAGS += -I $(LIBRUNT_DIR)/include
 CFLAGS += -std=c99
 
-syscall-names.o: $(SYS)-syscall-macros.h
+# musl has 'int' for line number, unlike glibc... librunt can hack around for us
+# FIXME: should be a configure-time thing perhaps? in which repo?
+# Problem is that configure might not see same libc headers as we plumb through here.
+CFLAGS += -DASSERT_FAIL_LINE_SIGNED
+
+syscall-names.o: syscall-macros.h
+# for syscall-macros.h
+CFLAGS += -I.
 
 # for dlmalloc.c
 vpath %.c $(srcroot)/contrib
@@ -84,13 +135,13 @@ vpath %.S $(DONALD)/src
 vpath %.h $(DONALD)/src
 CFLAGS += -I$(DONALD)/src
 
-C_SRC := $(filter-out %.inc.c,$(wildcard *.c))
-C_DEPS := $(patsubst %.c,.%.d,$(C_SRC))
+C_SRC := $(filter-out %.inc.c,$(wildcard $(srcroot)/example/*.c))
+C_DEPS := $(patsubst %.c,%.d,$(C_SRC))
 DEPS := $(C_DEPS)
-LOCAL_OBJS := $(filter-out pre-entry.o,$(filter-out write-footprints.o,$(patsubst %.c,%.o,$(C_SRC))))
+LOCAL_OBJS := $(filter-out pre-entry.o,$(filter-out write-footprints.o,$(patsubst %.c,%.o,$(notdir $(C_SRC)))))
 $(info LOCAL_OBJS is $(LOCAL_OBJS))
 
-$(DEPS): .%.d: %.c
+$(DEPS): %.d: %.c
 	$(CC) -MG -MM $(CFLAGS) $+ > "$@" || rm -f "$@"
 
 ifneq ($(MAKECMDGOALS),clean)
@@ -105,13 +156,15 @@ dlmalloc.a: dlmalloc.o
 	$(AR) r "$@" $^
 
 # This is a quick but incomplete way to build a number->name mapping
+# XXX: don't build this here. Use the version built by src/Makefile
 linux-syscall-macros.h:
-	( /usr/bin/cpp -E -dM -o - /usr/include/`gcc -print-multiarch`/asm/unistd.h </dev/null | \
+	( /usr/bin/cpp -E -dM -o - /usr/include/`gcc $(CFLAGS) -print-multiarch`/asm/unistd.h </dev/null | \
            grep '#define *__NR_' | sort | uniq | \
            sed -r 's/^#define *__NR_([^[:blank:]]*)[[:blank:]]*([0-9]*)/#ifdef SYS_\1\nSYSCALL(\1)\n#endif/') > "$@" || (rm -f "$@"; false)
 freebsd-syscall-macros.h:
 	cat /usr/include/sys/syscall.h | grep 'SYS_[a-z][A-Za-z0-9_]*' | cut -f2 | \
     sed 's/SYS_\(.*\)/SYSCALL(\1)/' > "$@" || (rm -f "$@"; false)
+#vpath %.h $(srcroot)/build/$(arch)
 syscall-macros.h: $(SYS)-syscall-macros.h
 	cp "$<" "$@"
 
@@ -120,7 +173,7 @@ syscall-macros.h: $(SYS)-syscall-macros.h
 # NOTE: the --whole-archive is only necessary for debugging, to ensure that
 # functions we might want to call from the debugger are actually linked in
 trace-syscalls.so: LDLIBS := -Bstatic \
-	$(srcroot)/lib/libsystrap.a \
+	$(srcroot)/build/$(arch)/libsystrap.a \
 	-Wl,--whole-archive $(LIBRUNT_DIR)/lib/librunt_preload.a -Wl,--no-whole-archive \
 	-ldl
 
@@ -163,13 +216,13 @@ trace-syscalls-ld.so: LDFLAGS += -Wl,--wrap,enter -Wl,--wrap,load_one_phdr \
 -Wl,--defsym,__wrap___runt_files_notify_load=__runt_files_notify_load \
 -Wl,--wrap,__runt_files_metadata_by_addr
 trace-syscalls-ld.so: LDLIBS += -Bstatic \
-  $(srcroot)/src/libsystrap.a \
+  $(srcroot)/build/$(arch)/libsystrap.a \
   $(LIBRUNT_DIR)/lib/librunt_preload.a \
   $(LIBC_A)
 
 trace-syscalls.so: trace-syscalls.o syscall-names.o dlmalloc.a fake-tls.o
 
-trace-syscalls.so: $(srcroot)/lib/libsystrap.a
+trace-syscalls.so: $(srcroot)/build/$(arch)/libsystrap.a
 	$(CC) -shared -static-libgcc \
 		-fuse-ld=gold \
 		-Wl,-soname=$@ \
@@ -182,8 +235,8 @@ trace-syscalls-ld.so: LDFLAGS += -Wl,--spare-dynamic-tags=5
 
 $(LDSO_OBJS): CFLAGS += -DDONALD_NAME=\"trace-syscalls-ld\" \
   -DCHAIN_LOADER \
-  -DCHAIN_LOADER_COVER_TRACKS_H='"$(shell pwd)/chain-decls.h"' \
-  -DCHAIN_LOADER_COVER_TRACKS_INC='"$(shell pwd)/chain.inc.c"'
+  -DCHAIN_LOADER_COVER_TRACKS_H='"$(srcroot)/example/chain-decls.h"' \
+  -DCHAIN_LOADER_COVER_TRACKS_INC='"$(srcroot)/example/chain.inc.c"'
 
 bootstrap.o: CFLAGS += -DCHAIN_LOADER
 
@@ -217,5 +270,11 @@ trace-syscalls-ld.lds: $(shell which ld) $(THIS_MAKEFILE)
 clean:
 	rm -f trace-syscalls.so trace-syscalls-ld.so
 	rm -f *.o *.a
-	rm -f .*.d
+	rm -f *.d
 	rm -f syscall-macros.h $(SYS)-syscall-macros.h
+	rm -f dynamic-list
+	rm -f trace-syscalls-ld.lds
+	rm -f trace-syscalls-ld.so.map
+	rm -f trace-syscalls.so.map
+
+endif # run-from-srcroot test
