--- a/test/x86_64/Makefile
+++ b/test/x86_64/Makefile
@@ -1,6 +1,5 @@
 .PHONY: default
-default: $(foreach t,true,run-$(t)-$(MODE).stamp)
-
+default: $(foreach t,true getpid clone3,run-$(t)-$(MODE).stamp)
 # we don't use getpid because it exits non-zero even on success
 # ... see below
 
@@ -24,10 +23,10 @@ run-%-$(MODE).stamp: %
 	$(PREFIX) ./$* && touch $@
 
 # getpid always exits non-zero, so how do we check it didn't crash?
-run-getpid-%.stamp: getpid
-	output=$$( $(PREFIX) ./getpid 2>&1); test -z "$$output" && touch $@
+run-getpid-preload.stamp run-getpid-chain.stamp: getpid
+	output=$$( $(PREFIX) ./getpid 2>&1); test -n "$$output" && touch $@
 
 # freestanding assembly tests -- these use a non-PIC idiom
-true getpid: LDFLAGS += -no-pie -nostartfiles -nostdlib
+true getpid clone3: LDFLAGS += -no-pie -nostartfiles -nostdlib
 # HACK: until glibc bug 25486 is fixed, we have to add -lc
-true getpid: LDLIBS += /lib64/ld-linux-x86-64.so.2 -Wl,--no-as-needed -lc
+true getpid clone3: LDLIBS += /lib64/ld-linux-x86-64.so.2 -Wl,--no-as-needed -lc
