--- a/test/x86_64/Makefile
+++ b/test/x86_64/Makefile
@@ -1,32 +1,18 @@
 .PHONY: default
-default: $(foreach t,true getpid clone3,run-$(t)-$(MODE).stamp)
-# we don't use getpid because it exits non-zero even on success
-# ... see below
+default: $(foreach m,preload chain,$(foreach t,true getpid clone3,run-$(t)-$(m).stamp))
 
-THIS_MAKEFILE := $(lastword $(MAKEFILE_LIST))
-srcroot := $(realpath $(dir $(realpath $(THIS_MAKEFILE)))/../..)
-$(info srcroot is $(srcroot))
+include $(dir $(realpath $(lastword $(MAKEFILE_LIST))))/../rules.mk
 
-include $(srcroot)/test/rules.mk
 clean::
-	rm -f true getpid
-
-ifeq ($(MODE),preload)
-PREFIX := LD_PRELOAD=$(srcroot)/build/$(shell uname -m)/trace-syscalls.so
-else
-ifeq ($(MODE),chain)
-PREFIX := $(srcroot)/build/$(shell uname -m)/trace-syscalls-ld.so
-endif
-endif
+	rm -f true getpid clone3
 
 CFLAGS += -g
 
-run-%-$(MODE).stamp: %
-	$(PREFIX) ./$* && touch $@
-
 # getpid always exits non-zero, so how do we check it didn't crash?
-run-getpid-preload.stamp run-getpid-chain.stamp: getpid
-	output=$$( $(PREFIX) ./getpid 2>&1); test -n "$$output" && touch $@
+run-getpid-preload.stamp: getpid
+	output=$$( LD_PRELOAD=$(PRELOAD_BINARY) ./getpid; echo $?); test -n "$$output" && touch $@
+run-getpid-chain.stamp: getpid
+	output=$$( $(CHAIN_BINARY) ./getpid; echo $?); test -n "$$output" && touch $@
 
 # freestanding assembly tests -- these use a non-PIC idiom
 true getpid clone3: LDFLAGS += -no-pie -nostartfiles -nostdlib
